[package]
name = "rust-hello-world"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Setting the panic mode has little effect on the built code (as Rust on RIOT
# supports no unwinding), but setting it allows builds on native without using
# the nightly-only lang_items feature.
panic = "abort"

[dependencies]
riot-wrappers = { path = "../../../rust-riot-wrappers", features = ["set_panic_handler", "panic_handler_crash", "panic_handler_format", "critical-section", "provide_critical_section_1_0", "with_msg_v2"] }
#riot-wrappers = { version = "0.8", features = [ "set_panic_handler" ] }
#riot-sys = "*"

# While currently this example does not use any RIOT modules implemented in
# Rust, that may change; it is best practice for any RIOT application that has
# its own top-level Rust crate to include rust_riotmodules from inside
# RIOTBASE.
rust_riotmodules = { path = "../../sys/rust_riotmodules/" }

[patch.crates-io]
#riot-wrappers = { path = "../../../rust-riot-wrappers" }
#riot-sys = { path = "../../../rust-riot-sys" }