[package]
name = "rust_riotmodules_standalone"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "staticlib" ]

[profile.release]
lto = true
opt-level = "s"
debug = true
panic = "abort"
codegen-units = 1

[dependencies]
riot-wrappers = { version = "0.9.0", features = [ "set_panic_handler" ] }

rust_riotmodules = { path = "../rust_riotmodules" }

[features]
# By having this explicit feature (comapred to what is enabled by the build
# system as `--features rust_riotmodules/foo`), all possible dependencies are
# visible to `cargo update` and in `Cargo.lock. This should not be enabled for
# compilation, as the modules behind it likely have their own RIOT modules they
# need enabled.
_all = [ "rust_riotmodules/_all" ]
