[package]
name = "rust-async"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# Setting the panic mode has little effect on the built code (as Rust on RIOT
# supports no unwinding), but setting it allows builds on native without using
# the nightly-only lang_items feature.
panic = "abort"

[dependencies]
riot-wrappers = { version = "0.9", features = [ "set_panic_handler", "provide_critical_section_1_0", "panic_handler_format" ] }

embassy-executor-riot = { git = "https://gitlab.com/etonomy/riot-module-examples" }
embassy-executor = "0.5"
embassy-futures = "0.1.1"
static_cell = "2.0.0"

# Needed on platforms such as samr21-xpro.
portable-atomic = { version = "1", features = [ "critical-section" ] }

# While currently this example does not use any RIOT modules implemented in
# Rust, that may change; it is best practice for any RIOT application that has
# its own top-level Rust crate to include rust_riotmodules from inside
# RIOTBASE.
rust_riotmodules = { path = "../../../../sys/rust_riotmodules/" }
